# rust-3d-experimentation

./: Cargo.toml
shaders/: simple.glslf  simple.glslv
src/: main.rs  utils.rs
